--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -39,6 +39,220 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "t7hhfyxgp8");
     </script>
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "LocalBusiness",
+          "@id": "https://zozosecurite.fr/#organization",
+          "name": "ZOZO Sécurité",
+          "alternateName": "Zozo Sécurité Montpellier",
+          "url": "https://zozosecurite.fr",
+          "logo": "https://zozosecurite.fr/logo-zozosécurité-favico/apple-touch-icon.png",
+          "telephone": "+33767563926",
+          "email": "contact@zozosecurite.fr",
+          "priceRange": "€€",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Montpellier",
+            "addressRegion": "Occitanie",
+            "postalCode": "34000",
+            "addressCountry": "FR"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": "43.6108",
+            "longitude": "3.8767"
+          },
+          "openingHoursSpecification": [
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+              "opens": "08:00",
+              "closes": "18:30"
+            },
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": "Sunday",
+              "opens": "08:00",
+              "closes": "17:00"
+            }
+          ],
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5.0",
+            "reviewCount": "75",
+            "bestRating": "5",
+            "worstRating": "1"
+          },
+          "areaServed": [
+            {
+              "@type": "City",
+              "name": "Montpellier"
+            },
+            {
+              "@type": "City",
+              "name": "Castelnau-le-Lez"
+            },
+            {
+              "@type": "City",
+              "name": "Grabels"
+            },
+            {
+              "@type": "City",
+              "name": "Lattes"
+            },
+            {
+              "@type": "City",
+              "name": "La Grande-Motte"
+            },
+            {
+              "@type": "City",
+              "name": "Nîmes"
+            }
+          ],
+          "sameAs": [
+            "https://www.google.com/maps?cid=YOUR_GOOGLE_BUSINESS_ID"
+          ]
+        },
+        {
+          "@type": "Service",
+          "@id": "https://zozosecurite.fr/alarme/installation-alarme-montpellier.html#service",
+          "serviceType": "Installation Alarme Sans Fil",
+          "name": "Installation Alarme Maison Montpellier",
+          "description": "Installation professionnelle de systèmes d'alarme sans fil Ajax et Hikvision à Montpellier. Sans mensualité, sans engagement, installation rapide en 48h. Plus de 1000 clients nous font confiance.",
+          "provider": {
+            "@id": "https://zozosecurite.fr/#organization"
+          },
+          "areaServed": [
+            {
+              "@type": "City",
+              "name": "Montpellier"
+            },
+            {
+              "@type": "City",
+              "name": "Castelnau-le-Lez"
+            },
+            {
+              "@type": "City",
+              "name": "Grabels"
+            },
+            {
+              "@type": "City",
+              "name": "Lattes"
+            },
+            {
+              "@type": "City",
+              "name": "La Grande-Motte"
+            },
+            {
+              "@type": "City",
+              "name": "Nîmes"
+            }
+          ],
+          "offers": {
+            "@type": "Offer",
+            "price": "600",
+            "priceCurrency": "EUR",
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "600",
+              "priceCurrency": "EUR",
+              "valueAddedTaxIncluded": true
+            },
+            "availability": "https://schema.org/InStock",
+            "url": "https://zozosecurite.fr/alarme/installation-alarme-montpellier.html",
+            "seller": {
+              "@id": "https://zozosecurite.fr/#organization"
+            }
+          },
+          "brand": [
+            {
+              "@type": "Brand",
+              "name": "Ajax Systems"
+            },
+            {
+              "@type": "Brand",
+              "name": "Hikvision"
+            }
+          ],
+          "warranty": {
+            "@type": "WarrantyPromise",
+            "durationOfWarranty": {
+              "@type": "QuantitativeValue",
+              "value": "2",
+              "unitCode": "ANN"
+            }
+          },
+          "additionalType": "https://schema.org/HomeAndConstructionBusiness",
+          "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Services d'Alarme",
+            "itemListElement": [
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Installation Alarme Appartement"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Installation Alarme Maison"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Installation Alarme Entreprise"
+                }
+              }
+            ]
+          }
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Accueil",
+              "item": "https://zozosecurite.fr"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Installation Alarme Montpellier",
+              "item": "https://zozosecurite.fr/alarme/installation-alarme-montpellier.html"
+            }
+          ]
+        },
+        {
+          "@type": "WebPage",
+          "@id": "https://zozosecurite.fr/alarme/installation-alarme-montpellier.html",
+          "url": "https://zozosecurite.fr/alarme/installation-alarme-montpellier.html",
+          "name": "Installation Alarme Montpellier | Système Sans Fil Ajax & Hikvision",
+          "description": "Installation d'alarme sans fil à Montpellier. Sans mensualité, sans engagement. +1000 clients satisfaits. Installation rapide en 48h. Devis gratuit.",
+          "isPartOf": {
+            "@id": "https://zozosecurite.fr/#website"
+          },
+          "about": {
+            "@id": "https://zozosecurite.fr/alarme/installation-alarme-montpellier.html#service"
+          },
+          "primaryImageOfPage": {
+            "@type": "ImageObject",
+            "url": "https://zozosecurite.fr/alarme/installation-alarme-maison-montpellier.webp"
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
