adding the subdomain pages

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -271,7 +271,7 @@
                     type="tel"
                     class="banner-phone-input"
                     name="phone"
-                    placeholder="Votre téléphone"
+                    placeholder="Être appelé"
                     pattern="[0-9]{10}"
                     required
                     aria-label="Entrez votre numéro de téléphone"
@@ -296,7 +296,7 @@
                 <img src="icon/alarme-pour-apartment.svg" alt="Alarme pour appartement" class="card-icon">
                 <div class="card-content-inner">
                     <h2 class="card-title">Je protège mon appartement</h2>
-                    <a href="#" class="card-button">
+                    <a href="devis-alarme.html" class="card-button">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M2 12h20M15 5l7 7-7 7"/>
                         </svg>
@@ -308,7 +308,7 @@
                 <img src="icon/Alarme-maison.svg" alt="Alarme pour maison" class="card-icon">
                 <div class="card-content-inner">
                     <h2 class="card-title">Je protège ma<br>maison</h2>
-                    <a href="#" class="card-button">
+                    <a href="devis-alarme.html" class="card-button">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M2 12h20M15 5l7 7-7 7"/>
                         </svg>
@@ -320,7 +320,7 @@
                 <img src="icon/alarme-professionels-entreprise.svg" alt="Alarme pour entreprise" class="card-icon">
                 <div class="card-content-inner">
                     <h2 class="card-title">Je protège mon<br>entreprise</h2>
-                    <a href="#" class="card-button">
+                    <a href="devis-alarme.html" class="card-button">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M2 12h20M15 5l7 7-7 7"/>
                         </svg>
