--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -397,6 +397,41 @@
         </div>
     </section>
 
+    <!-- How Our Alarm System Works Section -->
+    <section class="how-it-works-section">
+        <h2 class="how-it-works-title">Comment fonctionne notre système d'alarme ?</h2>
+        <p class="how-it-works-subtitle">Notre système d'alarme Ajax sans fil vous offre une protection complète et une réactivité exceptionnelle pour une tranquillité d'esprit inégalée.</p>
+
+        <div class="how-it-works-grid">
+            <!-- Card 1: Detection -->
+            <div class="work-card">
+                <img src="images/Détection-instantanée-alarme-montpellier.webp" alt="Détecteurs Ajax sans fil pour alarme maison" class="work-card-image">
+                <h3 class="work-card-title">1. Détection instantanée</h3>
+                <p class="work-card-text">Nos détecteurs Ajax sans fil surveillent votre propriété 24/7. En cas d'intrusion, de mouvement suspect ou d'ouverture de porte/fenêtre, le système détecte immédiatement l'anomalie grâce à ses capteurs intelligents.</p>
+            </div>
+
+            <!-- Card 2: Smartphone Alert -->
+            <div class="work-card">
+                <img src="images/Application-alarme.webp" alt="Notification alarme Ajax sur smartphone" class="work-card-image">
+                <h3 class="work-card-title">2. Alerte immédiate sur votre smartphone</h3>
+                <p class="work-card-text">Vous recevez une notification push instantanée sur votre téléphone via l'application Ajax. Vous êtes alerté en temps réel, où que vous soyez. Vous pouvez voir exactement quel détecteur s'est déclenché et à quelle heure.</p>
+            </div>
+
+            <!-- Card 3: Siren -->
+            <div class="work-card">
+                <img src="images/Sirène-dissuasive.webp" alt="Sirène alarme extérieure 113 dB" class="work-card-image">
+                <h3 class="work-card-title">3. Sirène dissuasive puissante</h3>
+                <p class="work-card-text">Une sirène extérieure de 113 dB se déclenche automatiquement pour dissuader les intrus et alerter le voisinage. Le système peut également activer les lumières intelligentes pour simuler une présence et faire fuir les cambrioleurs.</p>
+            </div>
+
+            <!-- Card 4: Optional Telesurveillance -->
+            <div class="work-card work-card-optional">
+                <h3 class="work-card-title">4. Option télésurveillance <span class="optional-badge">(facultatif)</span></h3>
+                <p class="work-card-text">Vous pouvez ajouter la télésurveillance 24/7 pour une protection maximale. Notre centre de surveillance réagit en moins de 20 secondes et contacte les forces de l'ordre via des numéros réservés pour une intervention immédiate.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- JavaScript -->
     <script src="alarm.js"></script>
 </body>
