--- a/contact.html
+++ b/contact.html
@@ -345,6 +345,7 @@
                                  <select id="subject" name="subject">
                                      <option value="">Sélectionnez un type de projet</option>
                                      <option value="Vidéosurveillance">Installation vidéosurveillance</option>
+                                     <option value="Interphone">Installation interphone</option>
                                      <option value="Câblage réseau">Câblage réseau</option>
                                      <option value="Baie de brassage">Installation baie de brassage</option>
                                      <option value="Réparation">Réparation / Maintenance</option>
