--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -426,8 +426,162 @@
 
             <!-- Card 4: Optional Telesurveillance -->
             <div class="work-card work-card-optional">
+                <img src="images/télésurveillance-alarme-montpellier.webp" alt="Télésurveillance alarme Montpellier 24/7" class="work-card-image">
                 <h3 class="work-card-title">4. Option télésurveillance <span class="optional-badge">(facultatif)</span></h3>
                 <p class="work-card-text">Vous pouvez ajouter la télésurveillance 24/7 pour une protection maximale. Notre centre de surveillance réagit en moins de 20 secondes et contacte les forces de l'ordre via des numéros réservés pour une intervention immédiate.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Kit Alarm Components Section -->
+    <section class="kit-components-section">
+        <h2 class="kit-section-title">Une protection complète</h2>
+        <p class="kit-section-subtitle">Grâce à notre alarme Ajax sans fil, nous vous protégeons face aux risques du quotidien : tentative d'intrusion, actes de vandalisme, dégagement de fumée, urgence médicale etc.<br>Chaque élément a son rôle essentiel dans la sécurité de votre bien.</p>
+
+        <div class="kit-image-container">
+            <img src="images/kit-alarme-pour-maison.webp" alt="Kit alarme Ajax complet pour maison" class="kit-main-image">
+
+            <!-- Component Labels -->
+            <!-- Right side: Door/Window sensor -->
+            <div class="kit-label" style="top: 50%; right: -9%;">
+                <div class="label-dot"></div>
+                <div class="label-line"></div>
+                <div class="label-text">
+                    <h4>Détecteur d'ouverture et de choc</h4>
+                    <p>Surveille les portes et fenêtres. Détecte les tentatives d'effraction et les chocs suspects.</p>
+                </div>
+            </div>
+
+            <!-- Motion Detector -->
+            <div class="kit-label kit-label-down" style="top: 85%; right: 30%;">
+                <div class="label-dot"></div>
+                <div class="label-line"></div>
+                <div class="label-text">
+                    <h4>Détecteur de mouvement</h4>
+                    <p>Détecte les mouvements suspects grâce à ses capteurs infrarouges ultra-précis.</p>
+                </div>
+            </div>
+
+            <!-- Keypad -->
+            <div class="kit-label kit-label-down" style="top: -3%; right: 63%;">
+                <div class="label-text">
+                    <h4>Clavier sans fil</h4>
+                    <p>Permet d'armer et désarmer facilement votre système d'alarme avec un code PIN.</p>
+                </div>
+                <div class="label-line"></div>
+                <div class="label-dot"></div>
+            </div>
+
+            <!-- Siren -->
+            <div class="kit-label kit-label-down" style="top: 85%; left: 30%;">
+                <div class="label-dot"></div>
+                <div class="label-line"></div>
+                <div class="label-text">
+                    <h4>Sirène intérieure</h4>
+                    <p>Émet une alarme sonore puissante pour dissuader les intrus et alerter le voisinage.</p>
+                </div>
+            </div>
+
+            <!-- Hub -->
+            <div class="kit-label kit-label-down" style="top: -8%; right: 42%;">
+                <div class="label-text">
+                    <h4>Hub central Ajax</h4>
+                    <p>Cerveau du système, coordonne tous les équipements et assure la communication sécurisée.</p>
+                </div>
+                <div class="label-line"></div>
+                <div class="label-dot"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials-section">
+        <h2 class="testimonials-title">Ce que disent nos clients</h2>
+        <p class="testimonials-subtitle">Plus de 1000 particuliers et professionnels nous font confiance à Montpellier et dans toute l'Occitanie</p>
+
+        <!-- Google Reviews Badge -->
+        <div class="google-reviews-badge">
+            <div class="google-reviews-content">
+                <span class="google-reviews-label">Note Google</span>
+                <div class="google-reviews-rating">
+                    <span class="google-rating-number">5.0</span>
+                    <div class="google-stars">★★★★★</div>
+                </div>
+                <span class="google-reviews-count">Basé sur 80 avis Google</span>
+            </div>
+            <svg class="google-logo" viewBox="0 0 272 92" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#EA4335" d="M115.75 47.18c0 12.77-9.99 22.18-22.25 22.18s-22.25-9.41-22.25-22.18C71.25 34.32 81.24 25 93.5 25s22.25 9.32 22.25 22.18zm-9.74 0c0-7.98-5.79-13.44-12.51-13.44S80.99 39.2 80.99 47.18c0 7.9 5.79 13.44 12.51 13.44s12.51-5.55 12.51-13.44z"/>
+                <path fill="#FBBC05" d="M163.75 47.18c0 12.77-9.99 22.18-22.25 22.18s-22.25-9.41-22.25-22.18c0-12.85 9.99-22.18 22.25-22.18s22.25 9.32 22.25 22.18zm-9.74 0c0-7.98-5.79-13.44-12.51-13.44s-12.51 5.46-12.51 13.44c0 7.9 5.79 13.44 12.51 13.44s12.51-5.55 12.51-13.44z"/>
+                <path fill="#4285F4" d="M209.75 26.34v39.82c0 16.38-9.66 23.07-21.08 23.07-10.75 0-17.22-7.19-19.66-13.07l8.48-3.53c1.51 3.61 5.21 7.87 11.17 7.87 7.31 0 11.84-4.51 11.84-13v-3.19h-.34c-2.18 2.69-6.38 5.04-11.68 5.04-11.09 0-21.25-9.66-21.25-22.09 0-12.52 10.16-22.26 21.25-22.26 5.29 0 9.49 2.35 11.68 4.96h.34v-3.61h9.25zm-8.56 20.92c0-7.81-5.21-13.52-11.84-13.52-6.72 0-12.35 5.71-12.35 13.52 0 7.73 5.63 13.36 12.35 13.36 6.63 0 11.84-5.63 11.84-13.36z"/>
+                <path fill="#34A853" d="M225 3v65h-9.5V3h9.5z"/>
+                <path fill="#EA4335" d="M262.02 54.48l7.56 5.04c-2.44 3.61-8.32 9.83-18.48 9.83-12.6 0-22.01-9.74-22.01-22.18 0-13.19 9.49-22.18 20.92-22.18 11.51 0 17.14 9.16 18.98 14.11l1.01 2.52-29.65 12.28c2.27 4.45 5.8 6.72 10.75 6.72 4.96 0 8.4-2.44 10.92-6.14zm-23.27-7.98l19.82-8.23c-1.09-2.77-4.37-4.7-8.23-4.7-4.95 0-11.84 4.37-11.59 12.93z"/>
+                <path fill="#4285F4" d="M35.29 41.41V32H67c.31 1.64.47 3.58.47 5.68 0 7.06-1.93 15.79-8.15 22.01-6.05 6.3-13.78 9.66-24.02 9.66C16.32 69.35.36 53.89.36 34.91.36 15.93 16.32.47 35.3.47c10.5 0 17.98 4.12 23.6 9.49l-6.64 6.64c-4.03-3.78-9.49-6.72-16.97-6.72-13.86 0-24.7 11.17-24.7 25.03 0 13.86 10.84 25.03 24.7 25.03 8.99 0 14.11-3.61 17.39-6.89 2.66-2.66 4.41-6.46 5.1-11.65l-22.49.01z"/>
+            </svg>
+        </div>
+
+        <p class="reviews-verified-note">
+            Tous ces avis sont vérifiables sur notre profil Google
+        </p>
+
+        <div class="testimonials-grid">
+            <!-- Testimonial 1 - Real Review -->
+            <div class="testimonial-card">
+                <div class="testimonial-stars">★★★★★</div>
+                <p class="testimonial-text">"Nous avons fait installer des caméras et une alarme chez nous par Zozo Sécurité. On voulait utiliser le moins de câbles possible, et le résultat est parfait : aucun câble apparent, tout est propre et discret. L'esthétique de la maison a été totalement respectée, et on se sent vraiment plus en sécurité maintenant. Merci aussi pour la formation à la fin, c'était clair et très utile. Super boulot, encore merci !"</p>
+                <div class="testimonial-author">
+                    <strong>Loan Mata</strong>
+                    <span>Installation alarme à Montpellier</span>
+                </div>
+            </div>
+
+            <!-- Testimonial 2 - Real Review -->
+            <div class="testimonial-card">
+                <div class="testimonial-stars">★★★★★</div>
+                <p class="testimonial-text">"Je suis très satisfaite de la prestation de l'entreprise zozo sécurité pour l'installation des caméras à mon domicile, le service était rapide et efficace, je recommande, Merci pour votre professionnalisme !"</p>
+                <div class="testimonial-author">
+                    <strong>Aziza Galtier</strong>
+                    <span>Installation caméra de surveillance Montpellier</span>
+                </div>
+            </div>
+
+            <!-- Testimonial 3 - Real Review -->
+            <div class="testimonial-card">
+                <div class="testimonial-stars">★★★★★</div>
+                <p class="testimonial-text">"J'ai contacté ZOZO Sécurité pour sécuriser mon commerce à Montpellier. Dès le premier rendez-vous, j'ai été rassuré par leur sérieux : un devis clair, des explications simples et des solutions adaptées à mes besoins. L'installation a été rapide et professionnelle, avec du matériel moderne et fiable. L'équipe est réactive et très à l'écoute. Je recommande sans hésiter cette entreprise pour toute installation de vidéosurveillance à Montpellier."</p>
+                <div class="testimonial-author">
+                    <strong>Alireza Abootorab</strong>
+                    <span>Alarme Montpellier - Commerce</span>
+                </div>
+            </div>
+
+            <!-- Testimonial 4 - Real Review -->
+            <div class="testimonial-card">
+                <div class="testimonial-stars">★★★★★</div>
+                <p class="testimonial-text">"Je recommande fortement cette entreprise et je n'hésiterais pas à faire appel de nouveau à elle. Personne très professionnelle, sérieuse, disponible et réactive en plus de cela. Travail de qualité et vraiment sérieux ! Merci beaucoup encore."</p>
+                <div class="testimonial-author">
+                    <strong>Marie Petit</strong>
+                    <span>Sécurité Montpellier - Particulier</span>
+                </div>
+            </div>
+
+            <!-- Testimonial 5 - Real Review -->
+            <div class="testimonial-card">
+                <div class="testimonial-stars">★★★★★</div>
+                <p class="testimonial-text">"Un professionnel de qualité, agréable et ponctuel. L'installation des équipements est impeccable et soignée. Je le recommande vivement. Encore merci !"</p>
+                <div class="testimonial-author">
+                    <strong>Oriane</strong>
+                    <span>Installation sécurité Montpellier</span>
+                </div>
+            </div>
+
+            <!-- Testimonial 6 -->
+            <div class="testimonial-card">
+                <div class="testimonial-stars">★★★★★</div>
+                <p class="testimonial-text">"L'équipe est très professionnelle et réactive. Installation propre sans percer les murs. Je recommande vivement !"</p>
+                <div class="testimonial-author">
+                    <strong>Isabelle F.</strong>
+                    <span>La Grande-Motte</span>
+                </div>
             </div>
         </div>
     </section>
